# napari-opt-handler

./: LICENSE  README.md  _main.py  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_opt_handler/: __init__.py  _qtwidget.py  _sample_data.py  backtrack.py  corrections.py  napari.yaml  plotting.py  utils.py  widget_settings.py
src/napari_opt_handler/_tests/: conftest.py  test_backtrack.py  test_corr.py  test_reader.py  test_sample_data.py  test_utils.py  test_widget.py  test_widget_qtbot.py  test_writer.py
