[project]
name = "napari-opt-handler"
dynamic = ["version"]
description = "Optical Projection Tomography preprocessing plugin for napari"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "David Palecek", email = "david@stanka.de"},
  {name = "Giorgia Tortora", email = "giorgia.tortora@polimi.it"}

]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "magicgui",
    "scikit-image",
    "matplotlib",
]

[project.optional-dependencies]
testing = [
    "pre-commit",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "pytest-mock",
    "pytest-timeout",
    "tox",
]
napari = [
    "magicgui",
    "napari[pyqt5]",
    "pooch >= 1",
    "qtpy",
]

[project.entry-points."napari.manifest"]
napari-opt-handler = "napari_opt_handler:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/QBioImaging/napari-opt-handler/issues"
"Documentation" = "https://github.com/QBioImaging/napari-opt-handler#README.md"
"Source Code" = "https://github.com/QBioImaging/napari-opt-handler"
"User Support" = "https://github.com/QBioImaging/napari-opt-handler/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
